--- a/.gitmodules
+++ b/.gitmodules
@@ -1,9 +1,9 @@
 [submodule "ass1"]
 	path = ass1
-	url = git@gitlab.com:dennuguyen/comp6771-ass1.git
+	url = git@github.com:dennuguyen/comp6771-ass1.git
 [submodule "ass2"]
 	path = ass2
-	url = git@gitlab.com:dennuguyen/comp6771-ass2.git
+	url = git@github.com:dennuguyen/comp6771-ass2.git
 [submodule "ass3"]
 	path = ass3
-	url = git@gitlab.com:dennuguyen/comp6771-ass3.git
+	url = git@github.com:dennuguyen/comp6771-ass3.git
